--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1> Odilon Rodrigues Carvalho</h1>  
+  <h1>                     Odilon Rodrigues Carvalho</h1>
+  <H2> Cidade: </H2> <h3>Trindade</h3>  
 </body>
 </html>
