--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Odilon Rodrigues Carvalho</h1>
-  <H2> Cidade:</H2>
-  <h3>Trindade</h3>  
+  <H2> Cidade: <h3>Trindade</h3>  </H2>
+  
 </body>
 </html>
