--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>Odilon Rodrigues Carvalho</h1>
-  <H2> Cidade: <h3>Trindade</h3>  </H2>
+  <H3> Cidade: Trindade</h3>
+    <H2>24 Anos, Casado</H2>
   
 </body>
 </html>
