--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Odilon Rodrigues Carvalho</h1>
-  <H3> Cidade: Trindade</h3>
-    <H2>24 Anos, Casado</H2>
+<h1>Odilon Rodrigues Carvalho</h1>
+
   
+</body>
+<h3> Cidade: Trindade</h3>
+    <h3>24 Anos, Casado</h3>
 </body>
 </html>
