--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </body>
 <h3>24 Anos, Casado</h3>
 <h3>Residente: Rua Mandaguari, Jardim Marista, Trindade - GO</h3>
-<h3>E-mail: <odilon_carvalho@discente class="ufg br"></odilon_carvalho@discente></h3>
+<h3>E-mail: odilon_carvalho@discente.ufg.br</h3>
 
 </body>
 </html>
