--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Odilon Rodrigues Carvalho</h1>
-
-  
+    <h1>Odilon Rodrigues Carvalho</h1>
 </body>
-<h3>24 Anos, Casado</h3>
-<h3>Residente: Rua Mandaguari, Jardim Marista, Trindade - GO</h3>
-<h3>E-mail: odilon_carvalho@discente.ufg.br</h3>
+
+<body>
+    <h3>24 Anos, Casado</h3>
+    <h3>Residente: Rua Mandaguari, Jardim Marista, Trindade - GO</h3>
+    <h3>E-mail: odilon_carvalho@discente.ufg.br</h3>
 
 </body>
 </html>
