--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </body>
 
 <body>
-    <h3>24 Anos, Casado</h3>
-    <h3>Residente: Rua Mandaguari, Jardim Marista, Trindade - GO</h3>
-    <h3>E-mail: odilon_carvalho@discente.ufg.br</h3>
+    <h3>24 Anos, Casado<br>
+    Residente: Rua Mandaguari, Jardim Marista, Trindade - GO<br>
+    E-mail: odilon_carvalho@discente.ufg.br</h3><br>
 
 </body>
 </html>
