--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </body>
 
 <body>
-    <h3>24 Anos, Casado<br>
+    <h3>
+    24 Anos, Casado<br>
     Residente: Rua Mandaguari, Jardim Marista, Trindade - GO<br>
-    E-mail: odilon_carvalho@discente.ufg.br</h3><br>
+    E-mail: odilon_carvalho@discente.ufg.br
+</h3>
 
 </body>
 </html>
