--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
     E-mail: odilon_carvalho@discente.ufg.br
 </h3>
 
+<h2>Formação Acadêmica</h2>
+<h3>
+    Graduando em Sistemas de Informações<br>
+    Instituição: Universidade Federal de Goiás
+</h3>
+
 </body>
 </html>
