--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     Instituição: Universidade Federal de Goiás
 </h3>
 
+<h2>Cursos Extracurriculares</h2>
+<h3>Montagem e Manutenção de Computadores e Redes</h3>
+
 </body>
 </html>
