--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
 <h2>Cursos Extracurriculares</h2>
 <h3>Montagem e Manutenção de Computadores e Redes</h3>
 
+<h2>Carreira Profissional</h2>
+<h4>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</h4>
+
 </body>
 </html>
