--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1>Odilon Rodrigues Carvalho</h1>
 </body>
 
+<style> 
+<h1> {
+    color: red;
+}
+</style>
+
 <body>
     <h3>
     24 Anos, Casado<br>
@@ -18,13 +24,13 @@
 </h3>
 
 <h2>Formação Acadêmica</h2>
-<h3>
+<h4>
     Graduando em Sistemas de Informações<br>
     Instituição: Universidade Federal de Goiás
-</h3>
+</h4>
 
 <h2>Cursos Extracurriculares</h2>
-<h3>Montagem e Manutenção de Computadores e Redes</h3>
+<h4>Montagem e Manutenção de Computadores e Redes</h4>
 
 <h2>Carreira Profissional</h2>
 <h4>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</h4>
