--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odilon Rodrigues Carvalho</h1>
-    <style> 
-            <h1> {
-                color: red;
-            }
-            </style>
+    <h1> <font face ="Gloria"> Odilon Rodrigues Carvalho </font> </h1>
+
 </body>
 
 <body>
