--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> <font face ="Gloria"> Odilon Rodrigues Carvalho </font> </h1>
+    <font face ="Gloria"> Odilon Rodrigues Carvalho </font>
 
 </body>
 
