--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <font face ="Gloria"> Odilon Rodrigues Carvalho </font>
+    <h1><font face ="Times"> Odilon Rodrigues Carvalho </font></h1>
 
 </body>
 
