--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><font face ="Arial"> Odilon Rodrigues Carvalho </font></h1>
+    <h1><font face ="gloria hallelujah"> Odilon Rodrigues Carvalho </font></h1>
 
 </body>
 
