--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><font face ="Snell Roundhand, cursive"> Odilon Rodrigues Carvalho </font></h1>
+    <h1> style="color:red">Odilon Rodrigues Carvalho </h1>
 
 </body>
 
