--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> style="color:red">Odilon Rodrigues Carvalho </h1>
+    <h1> style="font-family:verdana;
+        font-size:80%;color:green">Odilon Rodrigues Carvalho </h1>
 
 </body>
 
