--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+body {
+    background-color: #007ACC;
+}
 <body>
-    <h1> style="font-family:verdana;
-        font-size:80%;color:green">Odilon Rodrigues Carvalho </h1>
+    <h1> Odilon Rodrigues Carvalho </h1>
 
 </body>
 
