--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-body {
-    background-color: #007ACC;
-}
+<style>
+    h1, div {
+        background-color: rgb(0, 255, 213);
+    }
+    .destaque {
+        border:solid 1px;
+    }
+    #texto-principal {
+        border:solid 5px;
+    }
+</style>
+
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
 
