--- a/index.html
+++ b/index.html
@@ -42,5 +42,13 @@
 <h2>Carreira Profissional</h2>
 <h4>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</h4>
 
+<div class="destaque">
+    Aqui é um texto que usa Internal CSS com seletor de "class".
+  </div>
+  <!-- Internal style sheet - id selector -->
+  <div id="texto-principal">
+      Aqui é um texto que usa Internal CSS com seletor de "id".
+</div> 
+
 </body>
 </html>
