--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mini Curriculo</title>
+    <title>Mini Curriculo Odilon</title>
 </head>
 <style>
     h1, div {
@@ -25,21 +25,21 @@
 
 <body>
     <h3>
-    24 Anos, Casado<br>
-    Residente: Rua Mandaguari, Jardim Marista, Trindade - GO<br>
-    E-mail: odilon_carvalho@discente.ufg.br
+    <strong> Anos, Casado</strong><br>
+    <strong>Residente</strong> Rua Mandaguari, Jardim Marista, Trindade - GO<br>
+    <strong>Email: </strong> odilon_carvalho@discente.ufg.br
 </h3>
 
-<h2>Formação Acadêmica</h2>
+<h2><strong> Formação Acadêmica</strong></h2>
 <h4>
     Graduando em Sistemas de Informações<br>
-    Instituição: Universidade Federal de Goiás
+    <strong> Instituição:</strong> Universidade Federal de Goiás
 </h4>
 
-<h2>Cursos Extracurriculares</h2>
+<h2><strong> Cursos Extracurriculares</strong></h2>
 <h4>Montagem e Manutenção de Computadores e Redes</h4>
 
-<h2>Carreira Profissional</h2>
+<h2><strong> Carreira Profissional</strong></h2>
 <h4>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</h4>
 
 <div class="destaque">
