--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 <body>
     <h3>
     <strong> Anos, Casado</strong><br>
-    <strong>Residente</strong> Rua Mandaguari, Jardim Marista, Trindade - GO<br>
+    <strong>Residente: </strong> Rua Mandaguari, Jardim Marista, Trindade - GO<br>
     <strong>Email: </strong> odilon_carvalho@discente.ufg.br
 </h3>
 
 <h2><strong> Formação Acadêmica</strong></h2>
-<h4>
+<p>
     Graduando em Sistemas de Informações<br>
     <strong> Instituição:</strong> Universidade Federal de Goiás
-</h4>
+</p>
 
 <h2><strong> Cursos Extracurriculares</strong></h2>
-<h4>Montagem e Manutenção de Computadores e Redes</h4>
+<p>Montagem e Manutenção de Computadores e Redes</p>
 
 <h2><strong> Carreira Profissional</strong></h2>
-<h4>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</h4>
+<p>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</p>
 
 <div class="destaque">
     Aqui é um texto que usa Internal CSS com seletor de "class".
