--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     h1, div {
-        background-color: rgb(0, 255, 213);
+        color: rgba(255, 0, 13, 0.842);
     }
     .destaque {
         border:solid 1px;
@@ -31,16 +31,14 @@
 </h3>
 
 <h2><strong> Formação Acadêmica</strong></h2>
-<p>
-    Graduando em Sistemas de Informações<br>
-    <strong> Instituição:</strong> Universidade Federal de Goiás
-</p>
+    <p>Graduando em Sistemas de Informações<br>
+    <strong> Instituição:</strong> Universidade Federal de Goiás</p>
 
 <h2><strong> Cursos Extracurriculares</strong></h2>
-<p>Montagem e Manutenção de Computadores e Redes</p>
+    <p>Montagem e Manutenção de Computadores e Redes</p>
 
 <h2><strong> Carreira Profissional</strong></h2>
-<p>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</p>
+    <p>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</p>
 
 <div class="destaque">
     Aqui é um texto que usa Internal CSS com seletor de "class".
