--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
-    <img src="C:\Users\VIC\Pictures\image.png" alt=”some text” width=300 height=200>
+    <img src="C:\Users\VIC\Pictures\image.png" alt="some text" width=300 height=200>
 </body>
 
 <body>
