--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mini Curriculo Odilon</title>
 </head>
 <style>
-    h1, div {
+    h1,h2, div {
         color: rgba(255, 0, 13, 0.842);
     }
     .destaque {
@@ -20,7 +20,7 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
-    <img src="C:\Users\VIC\Pictures\image.png" alt="some text" width=300 height=200>
+    <img src="C:\Users\VIC\Pictures\image.png" width=300 height=200>
 </body>
 
 <body>
