--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     h1,h2, div {
-        color: rgba(17, 0, 255, 0.637);
+        color: rgba(17, 0, 255, 0.884);
     }
     .destaque {
         border:solid 1px;
@@ -20,12 +20,13 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
+    ![](C:\Users\VIC\Pictures\image.png)
     <img src="C:\Users\VIC\Pictures\image.png" width=300 height=200>
 </body>
 
 <body>
     <h3>
-    <strong> Anos, Casado</strong><br>
+    <strong> 24 Anos, Casado</strong><br>
     <strong>Residente: </strong> Rua Mandaguari, Jardim Marista, Trindade - GO<br>
     <strong>Email: </strong> odilon_carvalho@discente.ufg.br
 </h3>
