--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style>
     h1,h2, div {
         color: rgba(17, 0, 255, 0.884);
+        font-family: 'Gloria Hallelujah';
     }
     .destaque {
         border:solid 1px;
