--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
-    ![](C:\Users\VIC\Pictures\image.png)
-    <img src="C:\Users\VIC\Pictures\image.png" width=300 height=200>
+    <img src="C:\Users\VIC\odilon04.github.io\Imagens\image.png" width=300 height=200>
 </body>
 
 <body>
