--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
-    <img src="C:\Users\VIC\odilon04.github.io\Imagens\image.png" width=300 height=200>
+    <img src="Codilon04.github.io/Imagens/image.png" width=300 height=200>
 </body>
 
 <body>
