--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
-    <img src="Codilon04.github.io/Imagens/image.png" width=300 height=200>
+    <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200>
 </body>
 
 <body>
