--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
 <body>
     <h1> Odilon Rodrigues Carvalho </h1>
+</body>
+
+<body>
     <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200>
 </body>
 
