--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <h1> Odilon Rodrigues Carvalho </h1>
 </body>
 
+<style>
+    body {background: rgba(128, 128, 128, 0.575);}
+</style>
+
 <body>
     <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200>
 </body>
