--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </style>
 
 <body>
-    <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200>
+    <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200 />
 </body>
 
 <body>
