edição de celular

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
     body {background: rgba(128, 128, 128, 0.575);}
 </style>
 
-<body>
+
     <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200 />
-</body>
+
 
 <body>
     <h3>
     <strong> 24 Anos, Casado</strong><br>
     <strong>Residente: </strong> Rua Mandaguari, Jardim Marista, Trindade - GO<br>
     <strong>Email: </strong> odilon_carvalho@discente.ufg.br
+    Celular: 62 9 9275-2678.
 </h3>
 
 <h2><strong> Formação Acadêmica</strong></h2>
