--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h3>
     <strong> 24 Anos, Casado</strong><br>
     <strong>Residente: </strong> Rua Mandaguari, Jardim Marista, Trindade - GO<br>
-    <strong>Email: </strong> odilon_carvalho@discente.ufg.br
+    <strong>Email: </strong> odilon_carvalho@discente.ufg.br<br>
     Celular: 62 9 9275-2678.
 </h3>
 
@@ -47,7 +47,11 @@
     <p>Montagem e Manutenção de Computadores e Redes</p>
 
 <h2><strong> Carreira Profissional</strong></h2>
-    <p>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística</p>
+    <p>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística, realizando treinamentos de coletores de dados,<br>
+        rastreamento de veículos, sistema Milkway (fechamento de frete), ações de segurança no trânsito, configurações de <br>
+        rastreadores.<br>
+        Bom trabalho em equipe, tratamento com cliente direto e cliente indireto.
+    </p>
 
 </body>
 </html>
