--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </body>
 
 <style>
-    body {background: rgba(128, 128, 128, 0.575);}
-    body {background-image: url(https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/eaba55566674a50e253ebbd40bf3a14b43cfa8ba_00.gif)}
+    
+    body {background-image: url("https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/eaba55566674a50e253ebbd40bf3a14b43cfa8ba_00.gif");}
 </style>
 
 
