--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <style>
     
-    body {background-image: url("https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/eaba55566674a50e253ebbd40bf3a14b43cfa8ba_00.gif");}
+    body {background-image: url("odilon04.github.io/Imagens/eaba55566674a50e253ebbd40bf3a14b43cfa8ba_00.gif");}
 </style>
 
 
