--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Mini Curriculo Odilon</title>
 </head>
 <style>
-    h1,h2, div {
-        color: rgba(17, 0, 255, 0.884);
+    h1,h2, div, h3, p {
+        color: rgb(233, 232, 240);
         font-family: 'Lucida Sans';
     }
     .destaque {
