--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
 
 <style>
     
-    body {background-image: url("odilon04.github.io/Imagens/eaba55566674a50e253ebbd40bf3a14b43cfa8ba_00.gif");}
+    body {background-image: url("odilon04.github.io/Imagens/Color_coded_racetrack_large_channel.gif");}
+    <img src="odilon04.github.io/Imagens/image.png" width=300 height=200 />
+
 </style>
-
-
-    <img src="https://github.com/odilon04/odilon04.github.io/blob/master/Imagens/image.png" width=300 height=200 />
-
 
 <body>
     <h3>
