--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 </h3>
 
 <h2><strong> Formação Acadêmica</strong></h2>
-    <p>Graduando em Sistemas de Informações<br>
-    <strong> Instituição:</strong> Universidade Federal de Goiás</p>
+    <p><strong>Graduando em Sistemas de Informações</strong><br>
+    <strong> Instituição: Universidade Federal de Goiás</strong></p>
 
 <h2><strong> Cursos Extracurriculares</strong></h2>
-    <p>Montagem e Manutenção de Computadores e Redes</p>
+    <p><strong>Montagem e Manutenção de Computadores e Redes</strong></p>
 
 <h2><strong> Carreira Profissional</strong></h2>
-    <p>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística, realizando treinamentos de coletores de dados,<br>
+    <p<strong></p>>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística, realizando treinamentos de coletores de dados,<br>
         rastreamento de veículos, sistema Milkway (fechamento de frete), ações de segurança no trânsito, configurações de <br>
         rastreadores.<br>
-        Bom trabalho em equipe, tratamento com cliente direto e cliente indireto.
+        Bom trabalho em equipe, tratamento com cliente direto e cliente indireto.</strong>
     </p>
 
 </body>
