--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p><strong>Montagem e Manutenção de Computadores e Redes</strong></p>
 
 <h2><strong> Carreira Profissional</strong></h2>
-    <p<strong>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística, realizando treinamentos de coletores de dados,<br>
+    <p><strong>Há quatro anos trabalhando na aréa de Logística na empresa Vic Logística, realizando treinamentos de coletores de dados,<br>
         rastreamento de veículos, sistema Milkway (fechamento de frete), ações de segurança no trânsito, configurações de <br>
         rastreadores.<br>
         Bom trabalho em equipe, tratamento com cliente direto e cliente indireto.</strong>
